src/test/deca/syntax/invalid/Objet/ListClasses-NestedClass.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 10
//
// History:
//      Created in 17/1/2022

class A {
    class B {
    }
}